--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
             "database": "database-fa",
             "username": "root"
         }
-    ]
+    ],
+    "python.analysis.autoImportCompletions": true
 }
